<resources>
    <string name="app_name">Bounce It Up</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="shared_prefs_filename">MyFile</string>
    <string name="consecutive_days_daily_challenge">ConsecutiveDays</string>
    <string name="last_daily_challenge_date">LastDailyDate</string>
    <string name="main_title">Bouncy Ball</string>
    <string name="play_button">Play</string>
    <string name="daily_challenge_button">Daily Challenge</string>
    <string name="shop_button">Shop</string>
    <string name="daily_challenge_title">Daily Challenge</string>
    <string name="success_dialog_message">You are one step closer to getting a prize!</string>
    <string name="success_dialog_title">Correct!</string>
    <string name="ok">OK</string>
    <string name="error_dialog_message">Oops! You failed and have to start over&#8230;</string>
    <string name="error_dialog_title">Wrong!</string>
    <string name="challenge_complete_dialog_title">Challenge Complete!</string>
    <string name="challenge_complete_dialog_message">You have completed the challenge and received a reward!</string>
    <string name="total_touches">TotalTouches</string>
    <string name="total_gems">TotalGems</string>
    <string name="total_bounces_ever">TotalBouncesEver</string>
    <string name="owned_skins">OwnedSkins</string>
    <string name="collected_achievements">CollectedAchievements</string>
    <string name="owned_skins_labels">OwnedSkinsLabels</string>
    <string name="owned_trails">OwnedTrails</string>
    <string name="owned_trails_labels">OwnedTrailsLabels</string>
    <string name="owned_sounds">OwnedSounds</string>
    <string name="owned_sounds_labels">OwnedSoundsLabels</string>
    <string name="selected_skin">SelectedSkin</string>
    <string name="selected_skin_label">SelectedSkinLabel</string>
    <string name="selected_trail">SelectedTrail</string>
    <string name="selected_trail_label">SelectedTrailLabel</string>
    <string name="selected_sound">SelectedSound</string>
    <string name="selected_sound_label">SelectedSoundLabel</string>
    <string name="selected_boost">SelectedBoost</string>
    <string name="selected_boost_time">SelectedBoostTime</string>
    <string name="selected_boost_label">SelectedBoostLabel</string>
    <string name="linearLayout">LinearLayout</string>
    <string name="menuMusicSetting">MenuMusicSetting</string>
    <string name="shopMusicSetting">ShopMusicSetting</string>
    <string name="gameMusicSetting">GameMusicSetting</string>
    <string name="play_sound">Play Sound</string>
    <string name="answer">Answer</string>
    <string name="place_holder_text">Place Holder Text</string>
    <string name="consecutive_days">Consecutive Days</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="menu_music">Menu Music</string>
    <string name="game_music">Game Music</string>
    <string name="shop_music">Shop Music</string>
    <string name="close">Close</string>
    <string name="placeholder">Placeholder</string>
    <string name="double_it">Double it</string>
    <string name="achievements">Achievements</string>
    <string name="complete_for_a_chance">Complete for a chance at a prize!</string>
    <string name="spin">Spin</string>
    <string name="win_a_big_prize">Spin to win!</string>
    <string name="selected_ball">SelectedBall</string>
    <string name="selected_ball_label">SelectedBallLabel</string>
    <string name="owned_balls">OwnedBalls</string>
    <string name="owned_balls_labels">OwnedBallsLabels</string>
    <string name="todo">TODO</string>
    <string name="tutorial">Tutorial</string>
    <string name="customize_your_ball">- Customize your game</string>
    <string name="pick_up_the_coins">- Pick up the coins</string>
    <string name="shake_the_phone">- Shake the phone</string>
    <string name="flick_the_ball_around">- Flick the ball around</string>

</resources>
